syntax = "proto3";

package auth;

option go_package = "./api/proto/svc-auth";

service AuthService {
  rpc Registration(RegRequest) returns (RegResponse) {}
  rpc Signin(SigninRequest) returns (SigninResponse) {}

  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message RegRequest {
  string login = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string registration_token = 5;
  string password = 6;
  string token = 7;
}

message RegResponse {
  string token = 1;
  int64 status = 2;
  string error = 3;
}

message SigninRequest {
  string login = 1;
  string password = 2;
}

message SigninResponse {
  string token = 1;
  bool isTeacher = 2;
  int64 userId = 3;
  int64 status = 4;
  string error = 5;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
  bool isTeacher = 4;
}